# ComputerVision_NLP_HETIC_MD5

./: .gitignore  CONVENTIONS_NLP.md  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dataset_nlp/: README.md
experiments/: journal.jsonl
notebooks/: volet1_pipeline.ipynb
schemas/: data_contract.schema.json
segmentations/: README.md
src/htr/: __init__.py  data.py  data_contract.py  metrics.py  model.py  page_xml.py  preprocessing.py  seeds.py  segmentation.py
src/nlp/: __init__.py
tests/: conftest.py  test_data.py  test_data_contract.py  test_metrics.py  test_page_xml.py  test_preprocessing.py
