[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htr-catmus-french-2026"
version = "0.1.0"
description = "Pipeline HTR (Volet 1) + NLP (Volet 2) pour manuscrits médiévaux français — CATMuS Medieval. Projet MD5, Master Data/IA HETIC."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Farid Benamara et al." }]
keywords = ["HTR", "TrOCR", "Kraken", "CATMuS", "medieval", "digital-humanities", "NLP"]

# Dépendances CPU « cœur » : suffisent pour importer src/htr et lancer pytest
# (prétraitement, métriques, normalisation, data contract, PAGE XML).
# Le deep learning (torch/transformers/peft) est dans l'extra [train] pour ne
# PAS réinstaller le build GPU de torch déjà présent sur Colab.
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.8",
  "scikit-image>=0.22",
  "pillow>=10",
  "editdistance==0.8.1",
  "jiwer==4.0.0",
  "jsonschema>=4.21",
  "lxml>=5.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
# Pile figée et PROUVÉE pour l'entraînement/inférence TrOCR+LoRA (reproductibilité).
# torch n'est volontairement PAS épinglé : on garde le build CUDA de l'environnement.
train = [
  "transformers==4.46.3",
  "datasets==3.1.0",
  "peft==0.13.2",
  "accelerate==1.1.1",
]
# Segmentation de lignes de qualité (baselines + polygones) — Linux, lourd.
kraken = ["kraken>=5.2"]
# Outils de développement / tests / qualité.
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.urls]
Repository = "https://github.com/FaridBenamara/ComputerVision_NLP_HETIC_MD5"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
